--- a/style.css
+++ b/style.css
@@ -28,14 +28,12 @@ body {
     z-index: 1; /* Обеспечивает, что заголовок будет на переднем плане */
 }
 
-/* Подзаголовок */
+/* Текст на главной странице */
 .main-text {
-    position: absolute;
-    top: 35%; /* 20% ниже заголовка */
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
     padding: 20px;
     font-size: 1.2rem;
+    margin-top: 100px; /* Отступ сверху от фонового изображения */
     z-index: 1; /* Текст будет отображаться на переднем плане */
     background-color: transparent; /* Убираем подложку */
     color: white; /* Цвет текста белый */
@@ -70,38 +68,29 @@ audio {
 
 /* Кнопки для переключения аудиофайлов */
 button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    margin: 5px;
-    background-color: #555; /* Тёмно-серый цвет */
+    padding: 8px 18px; /* Уменьшенный размер */
+    font-size: 0.8rem; /* Уменьшенный шрифт */
+    margin: 0 10px; /* Отступы между кнопками */
+    background-color: #2f2f2f; /* Тёмно-графитовый фон */
     border: none;
     color: white;
     cursor: pointer;
-    display: inline-block;
+    transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #333; /* Цвет кнопки при наведении */
+    background-color: #434343; /* Цвет кнопки при наведении */
 }
 
-/* Выравнивание кнопок по центру */
-button {
-    display: block;
-    margin: 0 auto;
-}
-
-/* Стили для футера */
-footer {
-    text-align: center;
-    margin-top: 50px; /* Расстояние от контента до футера */
-}
-
+/* Ссылка на Telegram */
 footer a {
-    color: white; /* Белый цвет текста */
+    color: white; /* Цвет текста белый */
     text-decoration: none; /* Убираем подчеркивание */
-    font-size: 1.2rem;
+    font-size: 0.75rem; /* Уменьшаем размер текста */
+    margin-top: 20px;
+    display: inline-block;
 }
 
 footer a:hover {
-    color: #ff5500; /* Цвет текста при наведении */
+    text-decoration: underline;
 }
