--- a/style.css
+++ b/style.css
@@ -28,13 +28,15 @@ body {
     z-index: 1; /* Обеспечивает, что заголовок будет на переднем плане */
 }
 
-/* Текст на главной странице */
+/* Подзаголовок */
 .main-text {
-    position: relative;
-    padding: 20px;
+    position: absolute;
+    top: 35%; /* Подзаголовок будет расположен на 20% ниже заголовка */
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 1.2rem;
-    margin-top: 100px; /* Отступ сверху от фонового изображения */
-    z-index: 1; /* Текст будет отображаться на переднем плане */
+    padding: 20px;
+    z-index: 1; /* Подзаголовок будет на переднем плане */
     background-color: transparent; /* Убираем подложку */
     color: white; /* Цвет текста белый */
 }
@@ -103,7 +105,8 @@ footer a:hover {
     }
 
     .main-text {
-        margin-top: 60px; /* Уменьшаем отступ сверху */
+        top: 30%; /* Подзаголовок будет ниже на 20% от заголовка */
+        font-size: 1rem; /* Уменьшаем размер текста */
     }
 
     .players {
